2020-01-22  THO  <tobias@adrenochrom>

	* Reorganized into github
	* Added new graphical Backend with nuklear.h and glfw

Mon May 30 16:27:20 1994  David Heeger  (heeger at white)

	* Add make-inverse-discrete-function, that takes a df as input and
	produces the inverse function after checking that the input is
	monotonic-increasing.

	* Added verify-monotone-increasing as a method on arrays (got rid
	of the function version from gamma.lisp).

Mon May 23 17:44:48 1994  David Heeger  (heeger at violet)

	* Added mul methods on complex-image and complex-number

Tue Mar 29 22:58:22 1994  David Heeger  (heeger@violet)

* Fixed bug in singular-p.

* Changed make-quadrature-steerable-basis to make complex-images
rather than image-pairs.

Tue Mar 29 11:40:43 1994  Eduardo-Jose Chichilnisky  (ej at red)

	* Fixed SVD to only warn (rather than return NIL) when Linpack's
	C code complains. This was due to a case I found when Linpack's
	code returns something slightly wrong, but it seemed better to
	warn than to cause a crash by returning NIL.
	* Fixed minimum and maximum on lists to return positions, like
	array methods. Added minimum-location and maximum-location on lists.

Sat Mar 26 12:40:18 1994  David Heeger  (heeger@violet)

* Fixed bugs in col-space, row-space, col-null-space, row-null-space
in svd.lisp.

Fri Mar 25 15:43:49 1994  David Heeger  (heeger@violet)

* Added scatter-frob viewable and make-scatter methods to
drawing.lisp.  This used to be defined in
tutorials/psychophysics/scatter.

* Added cumulative-normal and inverse-detection-normal to
statistics.lisp.  This used to be defined in
tutorials/psychophysics/stuff.

* Added multiple-sort methods to misc.lisp.  This used to be defined
in tutorials/psychophysics/stuff.

Thu Mar 24 13:42:39 1994  David Heeger  (heeger@violet)

* Added internal8_circular_shift imops.c, lisp definition in
  lucid-ffi.lisp, and call it from circular-shift in array-ops.lisp

Mon Mar 12 09:10:54 1994  Eero Simoncelli  (eero at blue)
